# task-graph-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SCHEMA.md  recommendations.md  server.json  test-snapshot.json  update_routes.py
.github/workflows/: ci.yml  release.yml
config/: config.yaml  overlay-git.yaml  overlay-troubleshooting.yaml  prompts.yaml  workflow-hierarchical.yaml  workflow-kanban.yaml  workflow-push.yaml  workflow-relay.yaml  workflow-solo.yaml  workflow-sprint.yaml  workflow-swarm.yaml  workflows.yaml
config/prompts/: enter~working.md
config/scripts/: install.ps1
config/skills/: README.md
config/skills/task-graph-basics/: SKILL.md
config/skills/task-graph-coordinator/: SKILL.md
config/skills/task-graph-migration/: SKILL.md
config/skills/task-graph-repair/: SKILL.md
config/skills/task-graph-reporting/: SKILL.md
config/templates/: browser-project.json
docs/: CONFIGURATION.md  GATES.md  METRICS.md  PROCESSES.md  SCHEMA.md  WORKFLOW_TOPOLOGIES.md
docs/design/: authorization.md  database-backends.md  distributed-swarm.md  enterprise-config.md  experiment-framework.md  workflow-experiments.md
docs/diagrams/: README.md  architecture-overview.puml  component-architecture.puml  data-flow.puml  dependency-types.puml  entity-relationship.puml  file-coordination.puml  task-state-machine.puml
docs/feedback/: deliver-1-triage.md
experiments/: README.md  experiment-hybrid.yaml  pure-pull.yaml  push-experiment.yaml
experiments/templates/: browser-parallel.json  browser-phased.json
feedback/: EXPORT_IMPORT.md  migration-desires.md  phase.md  recommendations.md
migrations/: V001__initial_schema.sql  V002__drop_user_metrics.sql  V002__simplify_api.sql  V003__add_phase_and_unified_sequence.sql  V003__string_ids.sql  V004__claim_sequence.sql  V004__split_attachment_type_and_name.sql  V005__add_worker_workflow.sql  V005__media_attachments.sql  V006__add_worker_overlays.sql  V006__state_sequence.sql  V007__claim_id_on_release.sql  V008__query_indices.sql  V009__unified_dependencies.sql  V010__task_tags.sql  V011__rename_agents_to_workers.sql  V012__file_lock_task.sql  V013__fts5_search.sql  V014__rename_tag_affinity_columns.sql  V015__metrics_array.sql  V016__soft_delete.sql  V017__additional_query_indices.sql  V018__tag_junction_tables.sql  V019__standardize_naming.sql
scripts/: compare_experiments.py  run_experiment.py
skills/: README.md
skills/scripts/: install.py  install.sh
skills/task-graph-basics/: SKILL.md
skills/task-graph-coordinator/: SKILL.md
skills/task-graph-migration/: SKILL.md
skills/task-graph-repair/: SKILL.md
skills/task-graph-reporting/: SKILL.md
skills/task-graph-worker/: SKILL.md
src/: config.rs  error.rs  format.rs  gates.rs  lib.rs  logging.rs  main.rs  paths.rs  subscriptions.rs  types.rs
src/cli/: diff.rs  export.rs  import.rs  migrate.rs  mod.rs
src/config/: files.rs  loader.rs  merge.rs  mod.rs  types.rs  watcher.rs  workflows.rs
src/dashboard/: mod.rs  server.rs  templates.rs
src/dashboard/templates/: activity.html  base.html  dep_graph.html  file_marks.html  index.html  metrics.html  sql_query.html  task_detail.html  tasks.html  (+1 more)
src/db/: agents.rs  attachments.rs  dashboard.rs  deps.rs  export.rs  import.rs  inbox.rs  locks.rs  migrations.rs  mod.rs  schema.rs  search.rs  state_transitions.rs  stats.rs  tasks.rs  template.rs
src/export/: diff.rs  mod.rs
src/prompts/: mod.rs
src/resources/: agents.rs  config.rs  docs.rs  files.rs  mod.rs  skills.rs  stats.rs  tasks.rs  workflows.rs
src/tools/: agents.rs  attachments.rs  claiming.rs  context.rs  deps.rs  feedback.rs  files.rs  gates.rs  mod.rs  pubsub.rs  query.rs  schema.rs  search.rs  skills.rs  tasks.rs  tracking.rs  workflows.rs
task-graph/: config.yaml
task-graph/skills/: .approved
task-graph/templates/: browser-flat.json
tests/: connect_workflow_tests.rs  db_integration_tests.rs  feedback_tests.rs  overlay_tool_tests.rs  query_tests.rs  schema_tests.rs  workflow_config_tests.rs
(+2 files in other folders)
