[package]
name = "task-graph-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for atomic, token-efficient task management for multi-agent coordination"
license = "Apache-2.0"

[dependencies]
# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.37", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
petname = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde_yaml = "0.9"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "task-graph-mcp"
path = "src/main.rs"
